@@ -200,13 +200,7 @@ public class QTestUtil {
 
     srcTables = new LinkedList<String>();
 
-    preTestUtilInit();
     init();
-  }
-
-  protected void preTestUtilInit() throws Exception {
-    // do some initialization before we setup the hive
-    // for example, in a HBase Test Util, we setup a hbase mini cluster here
   }
 
   public void shutdown() throws Exception {
